# motor_test

./: .gitignore  Pipfile  README.md  README.zh.md  TODO.md  apriltag_cube_pose.py  atc_calibration.json  atc_setup.py  atc_test.py  camera_test.py  charuco_board_6x8_30mm.json  check_motor_status.py  clear_motor_faults.py  episode_picker.py  gripper_calibration.json  ik_replay.py  ik_track_cube.py  render_sim_video.py  repair_dataset.py  requirements.txt  requirements_other.txt  setup_env.sh  stereo_charuco_calibrate.py  teleop_trigger.py  teleop_trigger_backup.py  teleop_trigger_old.py  teleop_trigger_record.py  teleop_trigger_record_backup.py  teleop_trigger_record_old.py  test_cam_spec.py  test_motor_scan.py  test_open_close.py  test_raw.py  test_scs_scan.py  test_single_motor.py  test_waveshare_communication.py  zero-pos-calib.py
DM_Control_Python/: DM_CAN.py  README.md  README_MACOS_SCRIPTS.md  damiao_ids_macos.py  damiao_move_macos.py  damiao_position_calibrate.py  damiao_position_control.py  damiao_raw_log_macos.py  damiao_raw_send_macos.py  damiao_status_monitor.py  requirements.txt
detection_test/: README.md  common.py  detect_camera.py  requirements.txt  test.py  train.py
detection_test/My First Project.coco/: README.roboflow.txt
nova5_sim/: scene_single.xml
paxini/: .gitignore  README.md  pyproject.toml  read_s1813_elite.py  s1813_ui.py
paxini/paxini_sdk/: __init__.py  coordinates.py  models.py  s1813.py
paxini/paxini_ui/: __init__.py  app.js  index.html  style.css
paxini/tests/: test_sdk.py
(+3 files in other folders)
